Link zu Freiburg

--- a/www/ar/index.html
+++ b/www/ar/index.html
@@ -27,67 +27,72 @@
 				<a translate="no" href="../ru" class="langsel">русский язык</a>
 			</div>
 		</div>
+
+		<div class="content">
+			<h1>فرايبورغ؟</h1>
+			<p>للأسف، لقد أخطأنا في ذكر الموقع الإلكتروني على بطاقتنا البريدية. يرجى الذهاب هنا:</p>
+			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
+		</div>
+
 		<div class="content">
 			<h1>إيقاف بطاقة الدفع!</h1>
 
 			<img id="logo" src="../static/img/bzklogo.svg" />
 			
-			<p>في هايدلبرغ ومنطقة راين-نيكار، سيتم في وقت قريب إصدار "بطاقة الدفع" التمييزية لجميع اللاجئين الذين يتلقون المساعدات بموجب قانون استحقاقات طالبي اللجوء. تقف وراء قرار بطاقة الدفع سياسة عنصرية تحاول تضييق حياة اللاجئين وعزل أوروبا عن الجنوب العالمي. نحن نقاوم بطاقة الدفع التقييدية ونريد تحويل التضامن إلى ممارسة!</p>
+			<p>في هايدلبرغ ومنطقة راين نيكار، سيتم قريبًا تقديم بطاقة الدفع التمييزية لجميع الأشخاص اللاجئين الذين يتلقون خدمات بموجب قانون استحقاقات طالبي اللجوء. تقف خلف القرار المتعلق ببطاقة الدفع سياسة عنصرية تحاول بشكل متزايد تقييد حياة اللاجئين وعزل أوروبا عن الجنوب العالمي. نحن نعترض على بطاقة الدفع التقييدية ونريد أن نجعل التضامن ممارسة عملية!</p>
 
-			<h2>لماذا نعارض بطاقة الدفع؟</h2>
+			<h2>لماذا نرفض بطاقة الدفع؟</h2>
 
-			<p>تمثل بطاقة الدفع تدخلاً في استقلالية اللاجئين وتؤدي إلى تقليص المشاركة في الحياة اليومية. في منطقة راين-نيكار، سيكون هناك حد نقدي قدره 50 يورو. من المتوقع أن يكون هناك أيضًا تقييد مشابه في هايدلبرغ. التحويلات، التسوق عبر الإنترنت، والعقود غير ممكنة أو ممكنة فقط بصعوبة. العديد من مجالات الحياة تتطلب النقد: على سبيل المثال، المتاجر الصغيرة، سوق الأسبوع، الأسواق الشعبية أو الفعاليات الثقافية. كل هذا يتم تقييده بواسطة بطاقة الدفع.</p>
+			<p>تمثل بطاقة الدفع تدخلاً في استقلال الأفراد اللاجئين وتؤدي إلى تقييد المشاركة في الحياة اليومية. في منطقة راين نيكار سيكون هناك حد نقدي قدره 50 يورو. من المتوقع أن يكون هناك قيد مشابه أيضًا في هايدلبرغ. التحويلات المالية، التسوق عبر الإنترنت والعقود غير ممكنة أو تحتاج إلى جهد كبير. العديد من مجالات الحياة تتطلب النقود: على سبيل المثال، المتاجر الصغيرة، أسواق المزارعين، الأسواق المفتوحة أو حتى الفعاليات الثقافية. كل هذا يتم تقييده من خلال بطاقة الدفع.</p>
 
-			<p>حتى وإن كانت بطاقة الدفع تشبه في شكلها بطاقة الائتمان، فإن إمكانيات استخدامها أقل بكثير حيث لا تعمل إلا في متاجر محددة. وإذا أراد المتضررون توفير المال لدعم أسرهم في الخارج، يصبح هذا أكثر صعوبة. البطاقة تمثل مشكلة من حيث حماية البيانات. توفر بطاقة الدفع للسلطات رؤية وسبل للمراقبة.</p>
+			<p>حتى وإن كانت بطاقة الدفع تشبه من الخارج بطاقة الحساب الجاري، فإن استخداماتها محدودة بشكل أكبر، حيث أنها تعمل فقط في متاجر محددة. وعندما يرغب المتأثرون بجمع الأموال رغم تقديمات النقد الضيقة لدعم أسرتهم في الخارج، فإن ذلك يصبح صعباً عليهم. البطاقة تمثل مشكلة فيما يتعلق بحماية البيانات. بطاقة الدفع توفر للسلطات نظرة ووسائل للتحكم.</p>
 
+			<h2>ماذا نخطط للقيام به؟</h2>
 
-			<h2>ماذا لدينا في نيتنا؟</h2>
+			<p>نريد في هايدلبرغ عدم قبول هذه البطاقة التمييزية والإقصائية، ونريد أن نظهر تضامننا مع المتضررين.</p>
 
-
-			<p>لا نريد في هايدلبرغ قبول هذه البطاقة التمييزية والاقصائية، ونريد أن نظهر التضامن مع المتضررين.</p>
-
-			<p>لمواجهة تقييدات بطاقة الدفع، نلتف محليًا، وعلى غرار العديد من المبادرات الأخرى على مستوى الدولة، نود أيضًا تنظيم تبادل قسائم في هايدلبرغ والمناطق المحيطة.<p>
+			<p>لمواجهة القيود التي تفرضها بطاقة الدفع، نتحد محليًا. بناءً على نموذج العديد من المبادرات الأخرى على مستوى البلاد، نريد أيضًا تنظيم تبادل القسائم في هايدلبرغ والمناطق المحيطة بها.</p>
 
 			<p>المبدأ:</p>
 
 			<ol>
-				<li>الأشخاص الذين لديهم بطاقة الدفع يشترون قسيمة تسوق من السوبر ماركت</li>
-				<li>في تبادل القسائم، يحصلون على قيمة القسيمة نقدًا</li>
-				<li>الأشخاص المتضامنون الذين ليس لديهم بطاقة دفع يحصلون على القسائم مقابل النقود</li>
+				<li>يقوم الأشخاص الذين لديهم بطاقة الدفع بشراء قسيمة من السوبرماركت</li>
+				<li>عند التبادل، يحصلون على القيمة النقدية للقسيمة نقداً</li>
+				<li>الأفراد المتضامنون بدون بطاقة الدفع يحصلون على القسائم مقابل النقود</li>
 			</ol>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>إن عمليات التبادل ليست غير قانونية بل هي استجابة لسياسة يُحتمل أن تكون غير دستورية، حيث يتم انتهاك الحقوق الأساسية للمتضررين، وحد النقد المحدد بـ 50 يورو يعرض الحد الأدنى للوجود الكريم للخطر. (اقرأ المزيد تحت: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Etappensieg im Eilverfahren gegen restriktive Bezahlkarte: PRO ASYL und GFF unterstützen klagende Familie</a> | PRO ASYL)</p>
+			<p>التبادلات ليست غير قانونية بل هي رد على سياسة قد تكون غير دستورية، حيث يتم انتهاك الحقوق الأساسية للمتأثرين وتهدد الحد الأقصى النقدي بمبلغ 50 يورو الحد الأدنى للوجود الكريم. (يمكن الاطلاع على المزيد تحت: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Etappensieg im Eilverfahren gegen restriktive Bezahlkarte: PRO ASYL und GFF unterstützen klagende Familie</a> | PRO ASYL)</p>
 
-			<h2>كيف يمكنك أن تدعم؟</h2>
+			<h2>كيف يمكنك المساعدة؟</h2>
 
-			<p>يمكنك الاتصال بنا و/أو الحضور في اجتماعاتنا إذا كنت...</p>
+			<p>يمكنك الاتصال بنا و/أو المشاركة في اجتماعاتنا إذا كنت...</p>
 			<ul>
-				<li>... ترغب في تقديم وجهات نظر خاصة بك</li>
-				<li>... ترغب في المساعدة في تنظيم تبادلات القسائم</li>
-				<li>... ترغب في العمل ضمن الورديات في تبادل القسائم</li>
-				<li>... يمكنك توفير مساحات لنا</li>
-				<li>... إذا كنت منظمًا في أماكن ومستعد لتوزيع قسائم التسوق</li>
-				<li>... يمكنك بشكل جماعي استلام قسائم التسوق، مثل لشقتك المشتركة، مشروع الإسكان الخاص بك، جمعيتك...</li>
-				<li>... ترغب في المشاركة في حملة سياسية ضد هذه الهجمات العنصرية</li>
-				<li>... ترغب في دعم اتخاذ إجراء قانوني ضد بطاقة الدفع أو إذا كنت ترغب في التعرف علينا أو لديك أسئلة.</li>
+				<li>... ترغب في تقديم وجهات نظرك الخاصة</li>
+				<li>... ترغب في دعم تنظيم أسواق التبادل</li>
+				<li>... ترغب في تحمل نوبات العمل في سوق التبادل</li>
+				<li>... تستطيع توفير أماكن</li>
+				<li>... منظم في أماكن ومستعد لتقديم قسائم الشراء</li>
+				<li>... تستطيع بشكل جماعي شراء قسائم الشراء، مثل شقتك أو مشروعك المنزلي، أو جمعيتك...</li>
+				<li>... تريد المشاركة في حملة سياسية ضد هذه الهجمات العنصرية</li>
+				<li>... تريد دعم التعامل القانوني ضد بطاقة الدفع أو ترغب فقط في التعرف علينا أو لديك أسئلة.</li>
 			</ul>
 
-			<p>نحن أيضًا بحاجة إلى التبرعات. لعمليات التبادل، نحتاج إلى دعم مالي. بالإضافة إلى ذلك، نحتاج إلى بعض المال، مثل المواد كالمطويات أو الملصقات، أو المشتريات الصغيرة كالصناديق المعدنية القابلة للإغلاق أو الماسحات الضوئية للرموز الشريطية أو إيجار الأماكن للفعاليات التوضيحية. يمكن إصدار إيصالات التبرع.</p>
+			<p>نحن نعتمد أيضًا على التبرعات. نحتاج إلى مخزن مالي للمبادلات. وبالإضافة إلى ذلك، نحتاج إلى بعض المال، على سبيل المثال للمواد مثل المنشورات أو الملصقات، والمشتريات الصغيرة مثل الصناديق القابلة للقفل أو الماسحات الضوئية للرموز الشريطية أو إيجارات الأماكن لعقد الفعاليات الإعلامية. يمكن إصدار إيصالات التبرعات.</p>
 
-			<p>من أجل عالم تضامني!</p>
+			<p>من أجل عالم متضامن!</p>
 
-			<h2>كيف تبدو الهياكل على مستوى المناطق؟</h2>
+			<h2>كيف تبدو الهياكل الإقليمية؟</h2>
 
-			<p>لقد ظهرت بالفعل مبادرات في العديد من المدن ضد بطاقة الدفع وأيضًا مبادرات تبادل مثل مبادرتنا. نحن متصلون على مستوى الدولة ضمن شبكة "حقوق اجتماعية متساوية للجميع!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">الموقع الإلكتروني</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">انستغرام</a>)</p>
+			<p>هناك بالفعل مبادرات في العديد من المدن ضد بطاقة الدفع ومبادرات التبادل مثل مبادرتنا. نحن متصلون على مستوى البلاد في شبكة "حقوق اجتماعية متساوية للجميع!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">الموقع</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">Instagram</a>)</p>
 
 			<h2>مزيد من المعلومات</h2>
 			
 
 			<ul>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">التقييم العلمي لبطاقة الدفع</a><br/>مجلس اللاجئين بادن فورتمبيرغ</li>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">حقوق أقل وأقل للأشخاص اللاجئين</a><br/>مجلس اللاجئين بادن فورتمبيرغ</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">التقييم العلمي لبطاقة الدفع</a><br/>مجلس اللاجئين ولاية بادن فورتمبيرغ</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">حقوق أقل للاجئين بمرور الوقت</a><br/>مجلس اللاجئين ولاية بادن فورتمبيرغ</li>
 				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">ما يجب معرفته عن بطاقة الدفع الجديدة للاجئين</a><br/>برلمان ولاية بادن فورتمبيرغ</li>
 			</ul>
 		</div>
@@ -95,27 +100,26 @@
 		<div id="openletter" class="content">
 			<h1>رسالة مفتوحة</h1>
 
-			<p>السيدة العمدة يانسن المحترمة، أعضاء لجنة الشؤون الاجتماعية وتكافؤ الفرص المحترمين،</p>
+			<p>السيدة العمدة يانسن المحترمة، أعضاء لجنة الشؤون الاجتماعية وتكافؤ الفرص المحترمون،</p>
 
-			<p>بصدمة ودهشة نتابع عملية إدخال تدريجية لبطاقة الدفع للأشخاص الذين يتلقون المساعدات بموجب قانون استحقاقات طالبي اللجوء في بادن فورتمبيرغ. بسبب العدد الكبير من الجوانب التمييزية والمقيدة والاقصائية للبطاقة، نحن نعارض إدخالها في هايدلبرغ.</p>
+			<p>بشدة وصدمة نلاحظ الإدخال التدريجي لبطاقة الدفع للأشخاص الذين يتلقون الخدمات بموجب قانون استحقاقات طالبي اللجوء في ولاية بادن فورتمبيرغ. بسبب العديد من الجوانب التمييزية والمقيّدة والاستبعادية لبطاقة الدفع، نعترض على تقديمها في هايدلبرغ.</p>
 
 			<ol>
-			<li>الأشخاص الباحثون عن الحماية لديهم حساب مثل الآخرين في هايدلبرغ. باستخدام بطاقة الحساب الجاري، يمكنهم التصرف في أموالهم. إذا لم يكن لديهم عمل بعد، فإنهم يتلقون في البداية مساعدات بموجب قانون استحقاقات طالبي اللجوء. هذه المساعدات ستودع مستقبلاً على بطاقات دفع، حيث سيتم تقييد الإنفاق النقدي والتحويلات/الخصومات. الهدف: لا تحويلات إلى الأسرة الخاصة أو المهربين، ردع وتقليل "عوامل الجذب". هذه الخلفية لبطاقة الدفع تنتهك حقوقنا الأساسية: حظر التمييز، حماية الأسرة، الحقوق الشخصية.</li>
+			<li>الأشخاص الباحثون عن الحماية في هايدلبرغ لديهم حساب مثل الآخرين. مع بطاقة الحساب الجاري، يمكنهم الوصول إلى أموالهم. إذا لم يكونوا في سوق العمل بعد، فإنهم يحصلون في البداية على خدمات بموجب قانون AsylbLG. من المفترض أن يتم تحويل هذه الخدمات مستقبلاً إلى بطاقات الدفع، التي تقيد كل من النفقات النقدية وكذلك التحويلات/الخصومات. الهدف: لا تحويلات إلى العائلة أو إلى المهربين، ردع، تقليل "عوامل الجذب". هذا الأساس وراء بطاقة الدفع ينتهك حقوقنا الأساسية: حظر التمييز، حماية الأسرة، الحقوق الشخصية.</li>
 
-			<li>بطاقة الدفع تتدخل في الحقوق الشخصية. يتم تقييد الأشخاص اللاجئين بها. قد لا يتمكنون من التسوق في المتاجر التي يفضلونها، لأن تجهيز جهاز لقراءة بطاقات الخصم غالي الثمن بالنسبة للمتاجر الصغيرة. بالنسبة للتحويلات والخصومات، يحتاجون إلى تصريح من مكتب الشؤون الاجتماعية. إذا كانت هناك احتياجات خاصة، فعليهم تقديم طلب. 50 يورو نقدًا هو مبلغ يخضع لتقدير المكتب. تخصيص بطاقة الدفع نفسها يخضع لتقدير المكتب. لن يثقل هذا فقط إدارة المدينة بل سيزيد من اعتماد المتضررين على المكتب بصورة هائلة، أيضًا لأن الشفافية بالنسبة لهم تضيع.</li>
+			<li>بطاقة الدفع هي تدخل في الحقوق الشخصية. يتم تقييد الناس اللاجئين بها. قد لا يحدث التسوق في المحلات التي يفضلونها، نظرًا لأن إعداد جهاز القراءة للبطاقات الدائنة مكلف للغاية للمحلات الصغيرة. بالنسبة للتحويلات والخصومات، تحتاج إلى موافقة إدارة الشؤون الاجتماعية. إذا كان هناك احتياجات خاصة، يجب تقديم طلب. مبلغ النقد 50 يورو هو مبلغ يعتمد على تقدير المكتب. تعيين بطاقة الدفع نفسها يخضع لتقدير المكتب. هذا لن يثقل كاهل الإدارة فحسب، بل يجعل أيضًا اعتماد المتضررين على المكتب وحشيًا، لأن الشفافية بالنسبة لهم تضيع أيضًا.</li>
 
-			<li>الهدف من إدخال بطاقة الدفع لن يتحقق بأي حال. يُظهر تقرير أسبوع 49/2024 من DIW أن التحويلات الخارجية تأتي من اللاجئين بنسبة قليلة جدًا، وبالتأكيد أقل من أولئك الذين يتلقون استحقاقات وفقًا للقانون، لأن هذه المساعدات (بحد أقصى 441 يورو) أقل من الحد الأدنى للمعيشة ولا تفي بمتطلبات الحكم الصادر عن المحكمة الدستورية لعام 2012، والذي نص على أن الحد الأدنى للوجود لا يمكن تقليله لأسباب سياسية تتعلق بالهجرة. طبعًا أسباب الف
-			lücht متطلعوبة. </li>
+			<li>الهدف من تقديم بطاقة الدفع لن يتحقق رغم ذلك. يُظهر التقرير الأسبوعي DIW 49/2024 أن التحويلات المالية إلى الخارج تأتي فقط بنسبة ضئيلة جدًا من لاجئين، وبالتأكيد ليس الأقل منهم الذين يتلقون خدمات بموجب قانون AsylbLG، لأن هذه الخدمات (بحد أقصى 441€) أدنى من بدل المواطن ولا تلبي بالتأكيد المتطلبات التي وضعها حكم المحكمة الدستورية التابع لعام 2012، بأن الحد الأدنى للوجود لا يمكن تقييده سياسياً من خلال الهجرة. كما تمثل الأسباب الدافعة للهجرة بشكل طبيعي أهمية أكبر من مسألة الخدمة.</li>
 
-			<li>إدخال بطاقة الدفع التقييدية هو جزء من هجوم كبير على حقوق الأشخاص الباحثين عن الحماية. تقليل الحقوق الاجتماعية للاجئين يتزامن مع تعزيز "قلعة أوروبا" ومساعٍ للتخلص تدريجياً من المسؤولية تجاه حماية اللاجئين (الإعلان العالمي لحقوق الإنسان لعام 1948، المادة 14) والالتزامات بما في ذلك شكل اتفاقية جنيف الخاصة باللاجئين. لقد نجحت اليمين المتطرف في تطوير خطاب مهيمن، يعتبر الأشخاص الباحثين عن الحماية فقط تهديدًا. هذا السرد العنصري للأسف تتبناه أيضًا الأحزاب الديمقراطية منذ سنوات، مما يدفع عمليات فك التضامن ويحول الخطاب المجتمعي إلى اليمين. بطاقة الدفع ليست سوى سياسة رمزية شعبوية تخدم العنصرية وتستمر في تهميش، تمييز، ومراقبة الباحثين عن الحماية. لا هكذا تكون الاندماج!</li>
+			<li>إدخال بطاقة الدفع التقييدية هو جزء من هجوم كبير على حقوق الأشخاص الذين يبحثون عن الحماية. يترافق تقليص الحقوق الاجتماعية للاجئين مع بناء قلعة أوروبا وجهود التخلص تدريجياً من المسؤولية عن حماية اللاجئين (الإعلان العالمي لحقوق الإنسان 1948، المادة 14) وواجباتهم، لاسيما في شكل اتفاقية جنيف للاجئين. لقد تمكن اليمين المتطرف من تطوير خطاب حاسم يعتبر الأشخاص الباحثين عن الحماية كتهديد فقط. تلتقط الأحزاب الديمقراطية السابقة بأعداد متزايدة هذا الخطاب العنصري منذ سنوات. من خلال ذلك، يدفعون عمليًا عمليات التخلص من التضامن ويحولون الخطاب المجتمعي نحو اليمين. بطاقة الدفع ليست سوى سياسة رمزية شعبوية تخدم العنصرية وتعزل الأشخاص الباحثين عن الحماية وتهمشهم وتسيطر عليهم. التكامل يبدو مختلفًا تمامًا!</li>
 
-			<li>إدخال بطاقة الدفع ليس بدون بدائل. أدخلت ولاية شمال الراين-وستفاليا نظامًا يتيح للبلديات عدم إدخال بطاقة الدفع. وقد استفادت العديد من المدن الكبرى بالفعل من هذا. ولكن حتى في ولاية سكسونيا السفلى، يتزايد الرفض: بالرغم من عدم وجود نظام مشابه هناك، أعلنت مدينة هانوفر أنه لن يتم إدخال بطاقة الدفع، متخذة بذلك موقفًا معارضًا مفتوحًا بثقة. الأغلبية في المجلس البلدي، مع الفصائل من CDU, SPD, والخضر، أعلنت أنها لن تُدخل البطاقة لأنها تمييزية.</li>
+			<li>تقديم بطاقة الدفع ليس بلا بديل. قامت ولاية NRW بإدخال نظام اختياري يسمح للبلديات بعدم تقديم بطاقة الدفع. وقد استفادت بالفعل العديد من المدن الكبيرة من هذا الخيار. ولكن أيضًا في ساكسونيا السفلى، يتزايد الاحتجاج: على الرغم من أنه لا يوجد هناك نظام اختياري، إلا أن مدينة هانوفر أعلنت أنها لن تقدم بطاقة الدفع وتقدم مقاومة مفتوحة بثقة. أعلن المجلس البلدي بأغلبية تشمل فصائل CDU وSPD والخضر بأنهم لن يقدموا البطاقة لأنها تمييزية.</li>
 
 			</ol>
 
-			<p>نحن نطالب فصائل مجلس بلدي هايدلبرغ والإدارة برفض إدخال بطاقة الدفع التمييزية والعقيمة أيضًا في هايدلبرغ.</p>
+			<p>نحن نطالب الفصائل في مجلس مدينة هايدلبرغ والإدارة برفض بطاقة الدفع التمييزية وغير المجدية أيضًا في هايدلبرغ.</p>
 
-			<p>الموقعون الأوليون</p>
+			<p>الموقعون الأوائل</p>
 
 			<ul>
 				<li translate="no">Bettina Bauer-Teiwes</li>
@@ -162,25 +166,25 @@
 		</div>
 
 		<div id="contact" class="content">
-			<h1>اتصال وتبرعات</h1>
+			<h1>الاتصال والتبرعات</h1>
 
-			<p>نحن هيكل مفتوح ونجتمع بانتظام للتنسيق حول الخطوات التالية. هل لديك اهتمام بأن تصبح نشطاً ضد بطاقة الدفع؟ إذن تعال إلى أحد اجتماعاتنا القادمة أو اتصل بنا.</p>
+			<p>نحن هيكل مفتوح ونجتمع بانتظام لتنسيق الخطوات التالية. هل لديك اهتمام بأن تكون نشطًا ضد بطاقة الدفع؟ إذن انضم إلى أحد اجتماعاتنا القادمة أو اتصل بنا.</p>
 
-			<h2>اتصال</h2>
+			<h2>الاتصال</h2>
 
 			<ul>
 				<li>البريد الإلكتروني:<br/><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>انستغرام:<br/><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li translate="no">تيليجرام:<br/><a translte="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
+				<li translate="no">تليجرام:<br/><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
-			<h2>تبرعات</h2>
+			<h2>التبرعات</h2>
 
 			<pre translate="no">Röm.-Kath.
 Kirchengemeinde Heidelberg
 DE77 6725 0020 0001 2061 76
 Zweck: Gutschein 2813</pre>
-			الغرض من التبرع مهم، وإلا فلن يتم تخصيص التبرع بشكل صحيح!
+			الغرض مطلوب، وإلا لن يمكن تخصيص التبرع!
 		</div>
 
 	</body>
