--- a/www/de/index.html
+++ b/www/de/index.html
@@ -27,6 +27,13 @@
 				<a translate="no" href="../ru" class="langsel">русский язык</a>
 			</div>
 		</div>
+
+		<div class="content">
+			<h1>Freiburg?</h1>
+			<p>Leider haben wir auf unserer Postkarte die Internetseite falsch angegeben. Bitte hier entlang:</p>
+			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
+		</div>
+
 		<div class="content">
 			<h1>Bezahlkarte stoppen!</h1>
 
