--- a/www/en/index.html
+++ b/www/en/index.html
@@ -27,6 +27,13 @@
 				<a translate="no" href="../ru" class="langsel">русский язык</a>
 			</div>
 		</div>
+
+		<div class="content">
+			<h1>Freiburg?</h1>
+			<p>Unfortunately, we have given the wrong website on our postcard. Please click here:</p>
+			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
+		</h1></div>
+
 		<div class="content">
 			<h1>Stop the payment card!</h1>
 
@@ -58,7 +65,7 @@
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>The exchange campaigns are not unlawful but a response to an allegedly unconstitutional policy, as the basic rights of those affected are being violated and the cash ceiling of €50 jeopardizes the humane subsistence level. (Read more at: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Stage victory in summary proceedings against restrictive payment card: PRO ASYL and GFF support complaining family</a> | PRO ASYL)</p>
+			<p>The exchange campaigns are not unlawful but a response to an allegedly unconstitutional policy, as the basic rights of those affected are being violated and the cash ceiling of €50 jeopardizes the humane minimum subsistence level. (Read more at: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Stage victory in summary proceedings against restrictive payment card: PRO ASYL and GFF support complaining family</a> | PRO ASYL)</p>
 
 			<h2>How can you provide support?</h2>
 
@@ -170,7 +177,7 @@
 			<ul>
 				<li>E-Mail:<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>Instagram:<br><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li>Telegram:<br><a translte="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
+				<li translate="no">Telegram:<br><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
 			<h2>Donate</h2>
@@ -179,7 +186,7 @@
 Kirchengemeinde Heidelberg
 DE77 6725 0020 0001 2061 76
 Zweck: Gutschein 2813</pre>
-			The purpose of use is important, otherwise the donation cannot be assigned!</div>
+			The intended purpose is important, otherwise the donation cannot be allocated!</div>
 
 	</body>
 </html>
