--- a/www/es/index.html
+++ b/www/es/index.html
@@ -27,6 +27,13 @@
 				<a translate="no" href="../ru" class="langsel">русский язык</a>
 			</div>
 		</div>
+
+		<div class="content">
+			<h1>¿Friburgo?</h1>
+			<p>Lamentablemente, nos hemos equivocado de sitio web en nuestra postal. Haga clic aquí:</p>
+			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
+		</h1></div>
+
 		<div class="content">
 			<h1>¡Para la tarjeta de pago!</h1>
 
@@ -68,7 +75,7 @@
 				<li>... quieren apoyar la organización de los swap meets</li>
 				<li>... quieren hacer turnos en la tienda de intercambio</li>
 				<li>... puede poner locales a nuestra disposición</li>
-				<li>... eres organizado en las habitaciones y estarías dispuesto a dar vales de compra en tus habitaciones</li>
+				<li>... eres organizado en las habitaciones y estarías dispuesto a repartir vales de compra en tus habitaciones</li>
 				<li>... comprarnos colectivamente vales, por ejemplo, para su piso compartido, su proyecto de casa, su club...</li>
 				<li>... quieren participar en una campaña política contra estos ataques racistas</li>
 				<li>... quiere apoyarnos, emprender acciones legales contra la tarjeta de pago o simplemente si quiere conocernos o tiene preguntas.</li>
@@ -170,7 +177,7 @@
 			<ul>
 				<li>Envíenos un correo electrónico:<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>Instagram:<br><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li>Telegram:<br><a translte="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
+				<li translate="no">Telegram:<br><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
 			<h2>Donar</h2>
@@ -179,7 +186,7 @@
 Kirchengemeinde Heidelberg
 DE77 6725 0020 0001 2061 76
 Zweck: Gutschein 2813</pre>
-			¡El propósito de uso es importante, de lo contrario la donación no puede ser asignado!</div>
+			La finalidad prevista es importante, de lo contrario no se podrá asignar la donación.</div>
 
 	</body>
 </html>
