--- a/www/fa/index.html
+++ b/www/fa/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fa">
 	<head>
-		<title>توقف کارت پرداخت</title>
+		<title>توقف کارت اعتباری</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="author" content="Bezahlkarte Stoppen"/>
+		<meta name="author" content="توقف کارت اعتباری"/>
 		<meta name="robots" content="index,follow"/>
 		<meta name="description" content=""/>
 		<link href="../static/style/fonts.css" rel="stylesheet"/>
@@ -27,94 +27,100 @@
 				<a translate="no" href="../ru" class="langsel">русский язык</a>
 			</div>
 		</div>
+
 		<div class="content">
-			<h1>توقف کارت پرداخت!</h1>
+			<h1>Freiburg?</h1>
+			<p>متأسفانه ما در کارت پستال خود آدرس اینترنتی را اشتباه وارد کردیم. لطفا اینجا کلیک کنید:</p>
+			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
+		</div>
+
+		<div class="content">
+			<h1>توقف کارت اعتباری!</h1>
 
 			<img id="logo" src="../static/img/bzklogo.svg" />
 			
-			<p>در هایدلبرگ و منطقه راین-نکار، در آینده ای نزدیک، کارت پرداخت تبعیض آمیز برای تمامی پناهندگانی که بر اساس قانون مزایای متقاضیان پناهندگی درآمد دارند، معرفی خواهد شد. پشت تصمیم گیری برای کارت پرداخت، سیاستی نژادپرستانه قرار دارد که تلاش می کند زندگی پناهجویان را محدودتر کرده و اروپا را از جنوب جهانی جدا کند. ما در برابر کارت پرداخت محدود کننده مقاومت می کنیم و می خواهیم همبستگی را به عمل تبدیل کنیم!</p>
+			<p>در هایدلبرگ و منطقه راین-نکار قرار است به زودی کارت اعتباری تبعیض‌آمیز برای پناهجویانی که کمک‌های قانون تأمین نیازمندی‌های پناهجویان را دریافت می‌کنند، معرفی شود. این تصمیم پشت کارت اعتباری، سیاست نژادپرستانه‌ای است که تلاش می‌کند زندگی پناهجویان را به طور روزافزون محدود کند و اروپا را از جنوب جهانی جدا کند. ما در برابر کارت اعتباری محدودکننده مقاومت می‌کنیم و می‌خواهیم همبستگی را به عمل تبدیل کنیم!</p>
 
-			<h2>چرا ما کارت پرداخت را رد می کنیم؟</h2>
+			<h2>چرا ما کارت اعتباری را رد می‌کنیم؟</h2>
 
-			<p>کارت پرداخت دخالتی در خودمختاری افراد پناهجو ایجاد می کند و منجر به محدود شدن مشارکت در زندگی روزمره می‌شود. در منطقه راین-نکار، حدود نقدی ۵۰ یورو خواهد بود. انتظار می‌رود که در هایدلبرگ نیز محدودیتی مشابه وجود داشته باشد. انتقال‌های بانکی، خریدهای آنلاین و قراردادها امکان‌پذیر نیستند یا تنها با تلاش زیاد امکان‌پذیرند. بسیاری از زمینه‌های زندگی نیازمند پول نقد هستند: مانند مغازه‌های کوچک، بازار هفتگی، بازارچه‌ها یا حتی رویدادهای فرهنگی. همه این ها با کارت پرداخت محدود می‌شوند.</p>
+			<p>کارت اعتباری به نوعی دست در خودمختاری پناهجویان وارد می‌کند و باعث می‌شود که شرکت در زندگی روزمره محدود شود. در منطقه راین-نکار یک حد نقدی ۵۰ یورویی وجود خواهد داشت. انتظار می‌رود که در هایدلبرگ نیز محدودیت مشابهی وجود داشته باشد. انتقال‌ها، خرید آنلاین و قراردادها یا غیرممکن یا با زحمت زیاد ممکن هستند. بسیاری از جنبه‌های زندگی به پول نقد نیاز دارند: به عنوان مثال، فروشگاه‌های کوچک، بازار هفتگی، بازارهای دست‌دوم یا حتی رویدادهای فرهنگی. همه این‌ها با کارت اعتباری محدود می‌شوند.</p>
 
-			<p>حتی اگر کارت پرداخت از نظر ظاهر مشابه کارت عابربانک است، اما کاربردهای آن بسیار محدودتر است، زیرا کارت فقط در فروشگاه‌های خاص کار می‌کند. و اگر افرادی که تحت تاثیر کمبود مزایا هستند می‌خواهند پولی را کنار بگذارند تا از خانواده خود در خارج حمایت کنند، این کار برایشان بسیار سخت‌تر می‌شود. کارت از نظر حقوق حفظ حریم خصوصی مشکل دارد. کارت پرداخت به مقامات بستری برای نظارت و کنترل می‌دهد.</p>
-
-
-			<h2>ما چه برنامه ای داریم؟</h2>
+			<p>اگرچه کارت اعتباری از ظاهر به یک کارت بانکی شبیه است، اما امکانات استفاده آن بسیار محدودتر است زیرا کارت فقط در فروشگاه‌های خاصی کار می‌کند. و اگر افراد متأثر بخواهند با وجود کمبود کمک‌ها به خانواده خود در خارج از کشور کمک مالی کنند، آن‌ها با مشکلات زیادی روبرو خواهند شد. کارت از نظر حفاظتی داده‌ها نیز مشکل‌ساز است. کارت اعتباری به نیروها نمایی از داده‌ها و امکانات کنترلی می‌دهد.</p>
 
 
-			<p>ما نمی‌خواهیم این کارت تبعیض‌آمیز و منحصر به فرد را در هایدلبرگ بپذیریم و می‌خواهیم با افرادی که تحت تأثیر قرار گرفته‌اند همبستگی نشان دهیم.</p>
+			<h2>برنامه ما چیست؟</h2>
 
-			<p>برای مقابله با محدودیت‌های کارت پرداخت، به جامعه محلی می‌پیوندیم. با الهام از بسیاری دیگر از ابتکارات در سطح ملی، ما نیز در هایدلبرگ و اطراف آن قصد داریم یک مبادله کوپن را سازماندهی کنیم.<p>
+			<p>ما نمی‌خواهیم در هایدلبرگ این کارت تبعیض‌آمیز و حذف‌کننده را بپذیریم و می‌خواهیم با افراد متأثر همبستگی نشان دهیم.</p>
 
-			<p>اصول:</p>
+			<p>برای مقابله با محدودیت‌های کارت اعتباری، ما به صورت محلی متحد می‌شویم. به الگویی از بسیاری دیگر از ابتکارات در سطح کشور، ما نیز در هایدلبرگ و اطراف آن یک مبادله کوپن خرید راه‌اندازی می‌کنیم.</p>
+
+			<p>اصل:</p>
 
 			<ol>
-				<li>افرادی که کارت پرداخت دارند، یک کوپن خرید از سوپرمارکت خریداری می کنند</li>
-				<li>در تبادل کوپن، مبلغ کوپن را به صورت نقدی دریافت می کنند</li>
-				<li>افراد همبسته که کارت پرداخت ندارند، کوپن ها را در ازای پول نقد دریافت می کنند</li>
+				<li>افراد با کارت اعتباری یک کوپن خرید از سوپرمارکت خریداری می‌کنند</li>
+				<li>در مبادله کوپن، ارزش کوپن را به صورت نقدی دریافت می‌کنند</li>
+				<li>افراد همبسته بدون کارت اعتباری کوپن‌ها را به پول نقد مبادله می‌کنند</li>
 			</ol>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>مبادله ها قانونی نیستند بلکه پاسخی به سیاستی هستند که احتمالا غیرقانونی است، زیرا حقوق اساسی افرادی که تحت تاثیر قرار گرفته‌اند نقض می‌شود و محدودیت نقدی ۵۰ یورو حداقل وجود انسانی را تهدید می‌کند. (مطالعه بیشتر در: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">پیروزی اولیه در دادرسی فوری علیه کارت پرداخت محدود: پرو ازیل و جی اف اف ا از خانواده مدعی حمایت می‌کنند</a> | PRO ASYL)</p>
+			<p>مبادلات قانونی نیستند بلکه پاسخی هستند به سیاستی که ممکن است خلاف قانون‌اساسی باشد زیرا حقوق اساسی افراد متأثر نقض می‌شود و حد نقدی ۵۰ یورو حداقل زندگی شرافتمندانه را به خطر می‌اندازد. (برای مطالعه بیشتر: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Etappensieg im Eilverfahren gegen restriktive Bezahlkarte: PRO ASYL und GFF unterstützen klagende Familie</a> | PRO ASYL)</p>
 
-			<h2>چگونه می‌توانید کمک کنید؟</h2>
+			<h2>چگونه می‌توانی پشتیبان کنی؟</h2>
 
-			<p>لطفاً اگر می‌توانید در جلسات ما شرکت کنید و/یا اگر...</p>
+			<p>خوشحال خواهیم شد که با ما تماس بگیری و/یا در نشست‌های ما شرکت کنی، اگر...</p>
 			<ul>
-				<li>... می‌خواهید دیدگاه‌های خود را به اشتراک بگذارید</li>
-				<li>... می‌خواهید در سازماندهی بازارهای مبادله کمک کنید</li>
-				<li>... می‌توانید شیفت‌هایی در بازار مبادله انجام دهید</li>
-				<li>... می‌توانید مکان‌هایی برای ما فراهم کنید</li>
-				<li>... در مکان‌هایی سازماندهی شده‌اید و آماده‌اید کوپن‌های خرید در مکان‌های خود توزیع کنید</li>
-				<li>... می‌توانید به طور جمعی کوپن‌های خرید را تحویل بگیرید، مثلاً برای خوابگاه خود، پروژه خانه خود، باشگاه خود...</li>
-				<li>... می‌خواهید در یک کمپین سیاسی علیه این حملات نژادپرستانه شرکت کنید</li>
-				<li>... می‌خواهید به دستگیری قانونی کارت پرداخت کمک کنید یا حتی فقط اگر می‌خواهید با ما آشنا شوید یا سوالاتی دارید.</li>
+				<li>... می‌خواهی دیدگاه‌های خود را مطرح کنی</li>
+				<li>... می‌خواهی در سازماندهی بازارهای مبادله کمک کنی</li>
+				<li>... می‌خواهی نوبت‌ها در بازار مبادله را بر عهده بگیری</li>
+				<li>... می‌توانی اتاق‌هایی در اختیار ما قرار دهی</li>
+				<li>... در مکان‌هایی مستقل هستی و آماده‌اید که در مکان‌های خود کوپن‌های خرید ارائه دهید</li>
+				<li>... می‌توانی به صورت جمعی کوپن‌های خرید را بگیرید، مثلاً برای خانه مشترک خود، پروژه خانه‌داری، انجمن...</li>
+				<li>... می‌خواهی در یک کارزار سیاسی علیه این حملات نژادپرستانه شرکت کنی</li>
+				<li>... می‌خواهی کمک کنی تا به صورت قانونی با کارت اعتباری مقابله کنیم یا حتی اگر می‌خواهی ما را بشناسی یا سوالاتی داری.</li>
 			</ul>
 
-			<p>ما همچنین نیاز به کمک‌های مالی داریم. برای عملیات تبادل به یک حاشیه مالی نیاز داریم. علاوه بر این، به مقداری پول نیاز داریم، به عنوان مثال برای موادی مانند بروشور یا پوستر، خریدهای کوچکتر مانند صندوق‌های قفل‌دار یا بارکد اسکنر یا اجاره مکان برای برنامه‌های اطلاعاتی. ما می‌توانیم رسیدهای کمک مالی صادر کنیم.</p>
+			<p>ما همچنین به کمک‌های مالی نیاز داریم. برای مبادلات، به یک حاشیه مالی نیاز داریم. علاوه بر این، به مقداری پول نیاز داریم، مثلاً برای مواد مانند بروشورها یا پوسترها، خرید‌های کوچکتر مانند صندوق‌های قابل قفل شدن یا اسکنرهای بارکدی یا اجاره‌های اتاق برای برنامه‌های اطلاعاتی. می‌توان رسیدهای کمک مالی صادر کرد.</p>
 
-			<p>برای دنیای همبسته!</p>
+			<p>برای جهانی همبسته!</p>
 
-			<h2>ساختارهای فرامنطقه‌ای چگونه به نظر می‌رسند؟</h2>
+			<h2>ساختارهای فرامنطقه‌ای چگونه هستند؟</h2>
 
-			<p>در حال حاضر در بسیاری از شهرها ابتکاراتی علیه کارت پرداخت و ابتکارات تبادل مانند ما وجود دارد. ما در سطح ملی در شبکه "حقوق اجتماعی برابر برای همه!" به هم وصل هستیم (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">وبسایت</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">اینستاگرام</a>)</p>
+			<p>در بسیاری از شهرها در حال حاضر ابتکاراتی علیه کارت اعتباری و مبادلات مشابه ما وجود دارد. ما در سطح ملی در شبکه "حقوق اجتماعی برابر برای همه!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">وبسایت</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">اینستاگرام</a>)</p>
 
 			<h2>اطلاعات بیشتر</h2>
 			
 
 			<ul>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">ارزیابی علمی کارت پرداخت</a><br/>شورای پناهندگان بادن-وورتمبرگ</li>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">حقوق کمتر بیشتر برای افراد پناهجو</a><br/>شورای پناهندگان بادن-وورتمبرگ</li>
-				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">چیزی که درباره کارت پرداخت جدید برای پناهندگان باید بدانید</a><br/>مجلس ایالت بادن-وورتمبرگ</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">ارزیابی علمی کارت اعتباری</a><br/>Flüchtlingsrat Baden-Württemberg</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">همیشه کمتر حق برای پناهجویان</a><br/>Flüchtlingsrat Baden-Württemberg</li>
+				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">چه باید درباره کارت اعتباری جدید برای پناهجویان بدانید</a><br/>Landtag Baden-Württemberg</li>
 			</ul>
 		</div>
 
 		<div id="openletter" class="content">
 			<h1>نامه باز</h1>
 
-			<p>خانم شهردار جانسن محترم، اعضای محترم کمیته امور اجتماعی و برابری فرصت‌ها،</p>
+			<p>خانم شهردار جانسن عزیز، اعضای محترم کمیته امور اجتماعی و برابری فرصت‌ها،</p>
 
-			<p>ما با ترس و ناباوری، به معرفی تدریجی کارت پرداخت برای افرادی که در بادن-وورتمبرگ مزایای متقاضیان پناهندگی دریافت می‌کنند، نگاه می‌کنیم. با توجه به تعداد زیاد جنبه‌های تبعیض‌آمیز، محدود کننده و تجاوزگرانه کارت پرداخت، ما علیه معرفی آن در هایدلبرگ اظهار نظر می‌کنیم.</p>
+			<p>با وحشت و حیرت، مشاهده می‌کنیم که کارت اعتباری برای افرادی که کمک‌های قانون تأمین نیازمندی‌های پناهجویان را دریافت می‌کنند، در بادن-وورتمبرگ به طور مرحله‌ای معرفی می‌شود. به دلیل تعدد جنبه‌های تبعیض‌آمیز، محدودکننده و حذف‌کننده کارت اعتباری، ما در هایدلبرگ مخالف معرفی آن هستیم.</p>
 
 			<ol>
-			<li>افرادی که به دنبال حمایت هستند، در هایدلبرگ مانند دیگران دارای یک حساب هستند. با کارت حساب جاری، آنها می‌توانند بر روی پول خود تسلط داشته باشند. اگر آنها هنوز در کار مشغول نشده‌اند، ابتدا مزایایی بر اساس قانون AsylbLG دریافت می‌کنند. این‌ها به زودی به کارت‌های پرداخت منتقل می‌شود که تراکنش‌های نقدی و انتقال‌ها/برداشت‌ها را محدود می‌کند. هدف: هیچ انتقال پولی به خانواده خود و قاچاقچیان، ترساندن، کاهش "عوامل جذب". این زمینه‌ای برای کارت پرداخت است که علیه حقوق اساسی ماست: ممنوعیت تبعیض، حفاظت از خانواده، حقوق شخصیتی.</li>
+			<li>افراد پناهجو در هایدلبرگ همچون دیگران حساب بانکی دارند. با کارت بانکی می‌توانند به پول خود دسترسی داشته باشند. اگر هنوز در بازار کار نباشند، در ابتدا کمک‌هایی طبق قانون تأمین نیازمندی‌های پناهجویان دریافت می‌کنند. این کمک‌ها در آینده به کارت‌های اعتباری منتقل می‌شود که با آن‌ها مصرف نقدی و انتقالات/تقاضاهای مالی محدود می‌شود. هدف: جلوگیری از انتقال پول به خانواده خود و قاچاقچیان، جلوگیری و کاهش عوامل جذب. این پیش‌زمینه‌ها برای کارت اعتباری مخالف حقوق اساسی ماست: ممنوعیت تبعیض، حفظ خانواده، حقوق شخصیتی.</li>
 
-			<li>کارت پرداخت یک دخالت در حقوق شخصیتی است. افراد پناهجو با آن محدود می‌شوند. خرید در مغازه‌هایی که ترجیح می‌دهند ممکن است انجام نشود، زیرا برای مغازه‌های کوچک، تنظیم دستگاه خواندن کارت‌های دبیت بسیار گران است. برای انتقال‌ها و بدهی‌های مستقیم به اجازه دفتر اجتماعی نیاز است. اگر نیازهای خاصی وجود داشته باشد، باید درخواست شود. ۵۰ یورو نقدی یک مقدار است که به تصمیم اداره بستگی دارد. خود اختصاص کارت پرداخت به قضاوت اداره بستگی دارد. این نه تنها بار اداری را افزایش می‌دهد، بلکه وابستگی افراد متأثر به اداره را وحشتناک می‌کند، چرا که شفافیت برای آنها از بین می‌رود.</li>
+			<li>کارت اعتباری دخالتی در حقوق شخصیتی است. با این کارت، به پناهجویان فشار وارد می‌شود. خرید در فروشگاه‌هایی که آنها ترجیح می‌دهند ممکن است انجام نشود زیرا راه‌اندازی دستگاه کارت‌خوان برای فروشگاه‌های کوچک بسیار گران است. برای انتقالات و پرداخت‌های خودکار نیاز به تأیید اداره اجتماعی است. اگر نیازهای ویژه‌ای وجود داشته باشد، باید درخواست کرد. ۵۰ یورو پول نقد یک مبلغی است که تحت نظر اداره است. تخصیص خود کارت اعتباری نیز تحت نظر اداره است. این نه تنها به مدیریت اضافی فشار می‌آورد، بلکه وابستگی افراد متأثر به اداره را وحشتناک می‌کند و همچنین شفافیت از بین می‌رود.</li>
 
-			<li>هدف از معرفی کارت پرداخت به هر حال به دست نخواهد آمد. گزارش هفتگی ۴۹/۲۰۲۴ DIW نشان می‌دهد که انتقال وجه خارجی تنها در مقیاس بسیار کمی توسط پناهجویان انجام می‌شود و به یقین کمتر از آن کسانی که مزایای AsylbLG دریافت می‌کنند، چرا که این مزایا (حداکثر ۴۴۱ یورو) هنوز کمتر از Bürgergeld هستند و مطمئناً به نیازهایی که حکم دادگاه فدرال در سال ۲۰۱۲ مطرح کرد، کافی نیستند، که گفت که حداقلی انسانی نباید به دلایل سیاست مهاجرتی نسبی‌سازی شود. و البته دلیل‌های فرار همچنان سنگین‌تر از مسئله مزایا هستند.</li>
+			<li>هدف از معرفی کارت اعتباری به هر حال به دست نخواهد آمد. گزارش هفتگی ۴۹/۲۰۲۴ DIW نشان می‌دهد که انتقالات پول به خارج تنها در مقیاس بسیار کم از پناهجویان می‌آید و بدون شک کمترین از کسانی که کمک‌های قانون تأمین نیازمندی‌های پناهجویان دریافت می‌کنند، چرا که این کمک‌ها (حداکثر ۴۴۱ یورو) از کمک‌های مدنی هم کمترند و مطمئناً به نیازهایی که حکم دادگاه قانون‌اساسی فدرال در سال ۲۰۱۲ تعیین کرده بود که برآورده‌کننده حداقل زندگی شرافتمندانه مهاجرتی باشد، نمی‌پردازد. همچنین دلایل فرار بی‌شک مهم‌تر از مسئله کمک است.</li>
 
-			<li>معرفی کارت پرداخت محدود بخشی از یک حمله بزرگ به حقوق افرادی است که به دنبال حفاظت هستند. کاهش حقوق اجتماعی پناهجویان با گسترش قلعه اروپا و تلاش‌هایی همراه است که به تدریج از مسئولیت در قبال حفاظت از پناهندگان (اعلامیه جهانی حقوق بشر ۱۹۴۸، ماده ۱۴) و تعهدات نه‌چندان ناچیز در قالب کنوانسیون ژنو مربوط به وضعیت پناهندگان رهایی یابد. راست افراطی موفق شده است یک گفتمان غالب توسعه دهد که افرادی که به دنبال حفاظت هستند، تنها به چشم تهدید دیده می‌شوند. این روایت نژادپرستانه متاسفانه سال‌هاست که احزاب دموکراتیک نیز آن را بیشتر و بیشتر اقتباس می‌کنند. آنها با این کار فرآیندهای ضد‌همبستگی را پیش می‌برند و گفتگوی اجتماعی را به سمت راست می‌کشانند. کارت پرداخت چیزی جز سیاست سمبلیک پوپولیستی نیست که از نژادپرستی بهره‌برداری کرده و افراد محافظت‌جو را بیشتر تفکیک، تبعیض و کنترل می‌کند. انتگره‌سازی به گونه‌ای متفاوت به نظر می‌آید!</li>
+			<li>معرفی کارت اعتباری محدودکننده بخشی از یک حمله بزرگ به حقوق افراد پناهجو است. تخریب حقوق اجتماعی پناهجویان با تقویت قلعه اروپا و تلاش‌ها برای خلاص شدن از مسئولیت حفاظت از پناهجویان (اعلامیه جهانی حقوق بشر ۱۹۴۸، ماده ۱۴) و تعهدات در نهایت به صورت کنوانسیون پناهندگان ژنو انجام می‌شود. به ناجوانمردان افراطی موفق شده‌اند که یک گفتمان تعیین‌کننده ایجاد کنند که افراد پناهجو را تنها به عنوان تهدیدی می‌پندارد. این روایت نژادپرستانه متأسفانه در سال‌های اخیر توسط احزاب دموکرات به طور فزاینده‌ای مطرح شده است. آنها با این کار فرآیندهای بی‌رحمی را پیش می‌برند و گفتمان جامعه را به سمت راست حرکت می‌دهند. کارت اعتباری چیزی جز یک سیاست نمایشی پوپولیستی نیست که به نژادپرستی خدمت می‌کند و پناهجویان را بیشتر حذف، تبعیض و کنترل می‌کند. ادغام به این شکل نیست!</li>
 
-			<li>معرفی کارت پرداخت جایگزین ناپذیر نیست. NRW یک قاعده اختیاری معرفی کرده است که به شهرداری‌ها اجازه می‌دهد کارت پرداخت را معرفی نکنند. چندین شهر بزرگ از آن استفاده کرده‌اند. اما در نیدرزاکسن هم مقاومت می‌شود: اگرچه در آنجا قاعده اختیاری نیست، اما شهر هانوفر اعلام کرده است که کارت پرداخت را معرفی نخواهد کرد و بدین ترتیب مقاومتی آشکار می‌کند. شورای محلی مبتنی بر اکثریت و با همیاری فاقدن SPD و سبزها اعلام کرده‌اند که کارت را معرفی نخواهند کرد، زیرا تبعیض‌آمیز است.</li>
+			<li>معرفی کارت اعتباری نیست که گزینه دیگری نداشته باشد. در NRW یک قاعده حذف-پذیر معرفی شده است که به جوامع اجازه می‌دهد کارت اعتباری را معرفی نکنند. چندین شهر بزرگ از قبل از این قاعده استفاده کرده‌اند. اما در Niedersachsen هم مقاومت در حال ظهور است: اگرچه آنجا قاعده حذف‌پذیر وجود ندارد، شهر Hannover اظهار کرده که کارت اعتباری را معرفی نخواهد کرد و به این ترتیب به طور مفتوح مقاومت می‌کند. شورای شهرداری با اکثریت و با فراکسیون‌های CDU، SPD و سبزها اعلام کرد که کارت را معرفی نخواهند کرد زیرا تبعیض‌آمیز است.</li>
 
 			</ol>
 
-			<p>ما گروه‌های شورای محلی هایدلبرگ و مدیریت را برای رد کردن کارت پرداخت تبعیض‌آمیز و بی‌معنی در هایدلبرگ فرا می‌خوانیم.</p>
+			<p>ما از فراکسیون‌های شورای شهرداری هایدلبرگ و مدیریت تقاضا می‌کنیم که کارت اعتباری تبعیض‌آمیز و بی‌معنی را در هایدلبرگ نیز رد کنند.</p>
 
-			<p>امضا کنندگان اولیه</p>
+			<p>امضاکنندگان نخستین</p>
 
 			<ul>
 				<li translate="no">Bettina Bauer-Teiwes</li>
@@ -161,16 +167,16 @@
 		</div>
 
 		<div id="contact" class="content">
-			<h1>تماس و کمک‌های مالی</h1>
+			<h1>تماس & کمک‌های مالی</h1>
 
-			<p>ما یک ساختار باز داریم و به طور منظم برای هماهنگی مراحل بیشتر ملاقات می‌کنیم. آیا شما علاقه‌مندید که علیه کارت پرداخت فعال شوید؟ سپس به یکی از جلسات آینده ما بپیوندید یا با ما تماس بگیرید.</p>
+			<p>ما یک ساختار باز هستیم و مرتباً برای هماهنگی مراحل بعدی ملاقات می‌کنیم. آیا علاقه‌مندید که علیه کارت اعتباری فعال شوید؟ بنابراین به یکی از نشست‌های بعدی ما بیایید یا با ما تماس بگیرید.</p>
 
 			<h2>تماس</h2>
 
 			<ul>
-				<li>ایمیل:<br/><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
+				<li>پست الکترونیک:<br/><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>اینستاگرام:<br/><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li translate="no">تلگرام:<br/><a translte="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
+				<li translate="no">تلگرام:<br/><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
 			<h2>کمک‌های مالی</h2>
@@ -179,7 +185,7 @@
 Kirchengemeinde Heidelberg
 DE77 6725 0020 0001 2061 76
 Zweck: Gutschein 2813</pre>
-			استفاده از هدف مورد نظر مهم است، در غیر این صورت بودجه قابل تشخیص نخواهد بود!
+			<p>کاربرد مالی مهم است، در غیر این صورت کمک مالی نمی‌تواند تخصیص یابد!</p>
 		</div>
 
 	</body>
