--- a/www/fr/index.html
+++ b/www/fr/index.html
@@ -27,12 +27,19 @@
 				<a translate="no" href="../ru" class="langsel">русский язык</a>
 			</div>
 		</div>
+
+		<div class="content">
+			<h1>Fribourg ?</h1>
+			<p>Malheureusement, nous avons mal indiqué le site Internet sur notre carte postale. Veuillez suivre ce lien :</p>
+			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
+		</h1></div>
+
 		<div class="content">
 			<h1>Arrêter la carte de paiement !</h1>
 
 			<img id="logo" src="../static/img/bzklogo.svg" />
 			
-			<p>A Heidelberg et dans le district Rhin-Neckar, la "carte de paiement" discriminatoire sera bientôt introduite pour toutes les personnes réfugiées qui reçoivent des prestations en vertu de la loi sur les demandeurs d'asile. Derrière la décision de la carte de paiement se cache une politique raciste qui tente de restreindre toujours plus la vie des personnes en fuite et de séparer l'Europe du Sud global. Nous nous opposons à la carte de paiement restrictive et voulons faire de la solidarité une pratique !</p>
+			<p>A Heidelberg et dans le district Rhin-Neckar, la "carte de paiement" discriminatoire sera bientôt introduite pour toutes les personnes réfugiées qui reçoivent des prestations selon la loi sur les demandeurs d'asile. Derrière la décision de la carte de paiement se cache une politique raciste qui tente de restreindre toujours plus la vie des personnes en fuite et de séparer l'Europe du Sud global. Nous nous opposons à la carte de paiement restrictive et voulons faire de la solidarité une pratique !</p>
 
 			<h2>Pourquoi refusons-nous la carte de paiement ?</h2>
 
@@ -58,7 +65,7 @@
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>Les actions d'échange ne sont pas illégales, mais constituent une réponse à une politique présumée inconstitutionnelle, puisque les droits fondamentaux des personnes concernées sont violés et que le plafond de 50 € en espèces menace le minimum vital décent. (A lire sous : <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Victoire d'étape dans la procédure d'urgence contre la carte de paiement restrictive : PRO ASYL et GFF soutiennent une famille plaignante</a> | PRO ASYL)</p>
+			<p>Les actions de troc ne sont pas illégales, mais constituent une réponse à une politique présumée inconstitutionnelle, puisque les droits fondamentaux des personnes concernées sont violés et que le plafond de 50 € en espèces menace le minimum vital décent. (A lire sous : <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Victoire d'étape dans la procédure d'urgence contre la carte de paiement restrictive : PRO ASYL et GFF soutiennent une famille plaignante</a> | PRO ASYL)</p>
 
 			<h2>Comment peux-tu soutenir ?</h2>
 
@@ -80,7 +87,7 @@
 
 			<h2>A quoi ressemblent les structures interrégionales ?</h2>
 
-			<p>Il existe déjà dans de nombreuses villes des initiatives contre la carte de paiement et des initiatives d'échange comme la nôtre. Nous sommes reliés au niveau national par le réseau "Mêmes droits sociaux pour tous !"<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">(site web</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">Instagram</a>)</p>
+			<p>Il existe déjà dans de nombreuses villes des initiatives contre la carte de paiement et des initiatives d'échange comme la nôtre. Nous sommes reliés à l'échelle nationale au sein du réseau "Mêmes droits sociaux pour tous !"<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">(site web</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">Instagram</a>)</p>
 
 			<h2>Plus d'informations</h2>
 			
@@ -102,11 +109,11 @@
 			<ol>
 			<li>Les personnes en quête de protection ont un compte à Heidelberg comme les autres. Avec la carte de compte courant, ils peuvent disposer de leur argent. S'ils ne sont pas encore dans la vie active, ils reçoivent d'abord des prestations selon la AsylbLG. À l'avenir, celles-ci seront transférées sur des cartes de paiement qui permettront de limiter les dépenses en espèces ainsi que les virements/prélèvements. Objectif : éviter les transferts à sa propre famille et aux passeurs, dissuasion, réduction des "facteurs d'attraction". Ce contexte de carte de paiement va à l'encontre de nos droits fondamentaux : l'interdiction de discrimination, la protection de la famille, les droits de la personne.</li>
 
-			<li>La carte de paiement est une atteinte aux droits de la personne. Les personnes qui ont fui leur pays sont ainsi bridées. Les achats dans les magasins qu'elles préfèrent peuvent ne pas avoir lieu, car l'installation du lecteur de carte de débit est trop coûteuse pour les petits magasins. Pour les virements et les prélèvements, il faut l'autorisation des services sociaux. S'il y a des besoins particuliers, une demande doit être faite. 50 € en espèces est un montant soumis à l'appréciation de l'office. L'attribution de la carte de paiement elle-même est soumise à l'appréciation. Non seulement cela va créer une charge supplémentaire pour l'administration, mais cela rend également monstrueuse la dépendance des personnes concernées vis-à-vis de l'Office, notamment parce que la transparence est perdue pour elles.</li>
+			<li>La carte de paiement est une atteinte aux droits de la personne. Les personnes qui ont fui leur pays sont ainsi bridées. Les achats dans les magasins qu'elles préfèrent peuvent ne pas avoir lieu, car l'installation du lecteur de carte de débit est trop coûteuse pour les petits magasins. Pour les virements et les prélèvements, il faut l'autorisation des services sociaux. S'il existe des besoins particuliers, une demande doit être faite. 50 € en espèces est un montant soumis à l'appréciation de l'office. L'attribution de la carte de paiement elle-même est soumise à l'appréciation. Non seulement cela va créer une charge supplémentaire pour l'administration, mais cela rend également monstrueuse la dépendance des personnes concernées vis-à-vis de l'Office, notamment parce que la transparence est perdue pour elles.</li>
 
-			<li>L'objectif de l'introduction de la carte de paiement ne sera de toute façon pas atteint. Le rapport hebdomadaire 49/2024 du DIW montre que les transferts de fonds à l'étranger ne proviennent que très peu des réfugiés, et certainement le moins de ceux qui reçoivent des prestations selon la AsylbLG, car ces prestations (441€ maximum) sont encore inférieures au Bürgergeld et ne répondent certainement pas aux exigences posées par l'arrêt de la Cour constitutionnelle allemande de 2012, selon lequel le minimum vital ne doit pas être relativisé par la politique migratoire. Il va de soi que les raisons de la fuite pèsent plus lourd que la question des prestations.</li>
+			<li>L'objectif de l'introduction de la carte de paiement ne sera de toute façon pas atteint. Le rapport hebdomadaire 49/2024 du DIW montre que les transferts de fonds à l'étranger ne proviennent que dans une très faible mesure des réfugiés, et certainement le moins de ceux qui reçoivent des prestations selon la AsylbLG, car ces prestations (441€ maximum) sont encore inférieures au Bürgergeld et ne répondent certainement pas aux exigences posées par l'arrêt de la Cour constitutionnelle allemande de 2012, selon lequel le minimum vital ne doit pas être relativisé par la politique migratoire. Il va de soi que les raisons de la fuite pèsent plus lourd que la question des prestations.</li>
 
-			<li>L'introduction d'une carte de paiement restrictive fait partie d'une attaque majeure contre les droits des personnes en quête de protection. Le démantèlement des droits sociaux des personnes en fuite va de pair avec le développement de la forteresse Europe et les efforts visant à se défaire progressivement de la responsabilité de la protection des réfugiés (Déclaration universelle des droits de l'homme de 1948, article 14) et des obligations, notamment sous la forme de la Convention de Genève sur les réfugiés. L'extrême droite a réussi à développer un discours déterminant qui ne considère plus les personnes en quête de protection que comme une menace. Depuis des années, les partis démocratiques reprennent malheureusement de plus en plus ce récit raciste. Ils font ainsi avancer les processus de désolidarisation et déplacent le discours social vers la droite. La carte de paiement n'est rien d'autre qu'une politique symbolique populiste qui sert le racisme et qui continue à exclure, à discriminer et à contrôler les personnes en quête de protection. L'intégration se présente autrement !</li>
+			<li>L'introduction d'une carte de paiement restrictive fait partie d'une attaque majeure contre les droits des personnes en quête de protection. Le démantèlement des droits sociaux des personnes en fuite va de pair avec le développement de la forteresse Europe et les efforts visant à se défaire peu à peu de la responsabilité de la protection des réfugiés (Déclaration universelle des droits de l'homme de 1948, article 14) et des obligations, notamment sous la forme de la Convention de Genève sur les réfugiés. L'extrême droite a réussi à développer un discours déterminant qui ne considère plus les personnes en quête de protection que comme une menace. Depuis des années, les partis démocratiques reprennent malheureusement de plus en plus ce récit raciste. Ils font ainsi avancer les processus de désolidarisation et déplacent le discours social vers la droite. La carte de paiement n'est rien d'autre qu'une politique symbolique populiste qui sert le racisme et qui continue à exclure, à discriminer et à contrôler les personnes en quête de protection. L'intégration se présente autrement !</li>
 
 			<li>L'introduction de la carte de paiement n'est pas sans alternative. La Rhénanie-du-Nord-Westphalie a introduit une règle d'opt-out qui permet aux municipalités de ne pas introduire la carte de paiement. Plusieurs grandes villes ont déjà fait usage de cette possibilité. Mais la résistance s'organise également en Basse-Saxe : bien qu'il n'y ait pas de règle d'opt-out, la ville de Hanovre a déclaré qu'elle n'introduirait pas la carte de paiement et fait ainsi preuve d'une résistance ouverte et consciente. Le conseil municipal a déclaré à la majorité et avec les groupes parlementaires de la CDU, du SPD et des Verts, qu'il n'introduirait pas la carte parce qu'elle est discriminatoire.</li>
 
@@ -170,7 +177,7 @@
 			<ul>
 				<li>E-mail :<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>Instagram :<br><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li>Telegram :<br><a translte="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
+				<li translate="no">Telegram:<br><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
 			<h2>Dons</h2>
