--- a/www/ru/index.html
+++ b/www/ru/index.html
@@ -27,6 +27,13 @@
 				<a translate="no" href="../ru" class="langsel">русский язык</a>
 			</div>
 		</div>
+
+		<div class="content">
+			<h1>Фрайбург?</h1>
+			<p>К сожалению, мы указали неправильный веб-сайт на нашей открытке. Пожалуйста, нажмите здесь:</p>
+			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
+		</h1></div>
+
 		<div class="content">
 			<h1>Остановите платежную карту!</h1>
 
@@ -102,7 +109,7 @@
 			<ol>
 			<li>У людей, ищущих защиты в Гейдельберге, есть счет, как и у всех остальных. Для доступа к своим деньгам они могут использовать карточку текущего счета. Если они еще не трудоустроены, то первоначально получают пособия в соответствии с AsylbLG. В дальнейшем они должны быть переведены на платежные карты, с которых ограничены как расходы наличными, так и переводы/дебетовые операции. Цель: отсутствие переводов собственной семье и контрабандистам, сдерживание, снижение "факторов притяжения". Такая основа для платежных карт нарушает наши фундаментальные права: запрет на дискриминацию, защиту семьи, личные права.</li>
 
-			<li>Платежная карта - это посягательство на личные права. Люди, покинувшие свою страну, становятся объектом контроля. Они могут лишиться возможности делать покупки в своих любимых магазинах, потому что небольшим магазинам слишком дорого устанавливать считывающее устройство для дебетовых карт. Переводы и прямые дебетовые платежи требуют разрешения от управления социального обеспечения. Если есть особые потребности, необходимо подать заявление. 50 € наличными - это сумма, которая выдается по усмотрению управления. Выделение самой платежной карты зависит от усмотрения. Это не только ляжет дополнительным бременем на администрацию, но и поставит пострадавших в чудовищную зависимость от ведомства, в том числе и потому, что для них будет потеряна прозрачность.</li>
+			<li>Платежная карта - это посягательство на личные права. Люди, покинувшие свою страну, становятся объектом контроля. Они могут лишиться возможности делать покупки в любимых магазинах, потому что небольшим магазинам слишком дорого устанавливать считывающее устройство для дебетовых карт. Переводы и прямые дебетовые платежи требуют разрешения от управления социального обеспечения. Если есть особые потребности, необходимо подать заявление. 50 € наличными - это сумма, которая выдается по усмотрению управления. Выделение самой платежной карты зависит от усмотрения. Это не только ляжет дополнительным бременем на администрацию, но и поставит пострадавших в чудовищную зависимость от ведомства, в том числе и потому, что для них будет потеряна прозрачность.</li>
 
 			<li>Цель введения платежной карты все равно не будет достигнута. Еженедельный доклад DIW 49/2024 показывает, что лишь очень немногие беженцы отправляют денежные переводы за границу, и уж точно меньше всего тех, кто получает пособия по программе AsylbLG, поскольку эти пособия (максимум 441 евро) даже ниже пособия гражданина и уж точно не соответствуют требованиям, установленным постановлением Федерального конституционного суда от 2012 года, согласно которому прожиточный минимум не должен релятивизироваться с точки зрения миграционной политики. Само собой разумеется, что причины бегства имеют более весомое значение, чем вопрос о пособиях.</li>
 
@@ -168,9 +175,9 @@
 			<h2>Свяжитесь с нами</h2>
 
 			<ul>
-				<li>Пишите нам:<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
+				<li>Напишите нам:<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>Instagram:<br><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li>Telegram:<br><a translte="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
+				<li translate="no">Telegram:<br><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
 			<h2>Пожертвовать</h2>
@@ -179,7 +186,7 @@
 Kirchengemeinde Heidelberg
 DE77 6725 0020 0001 2061 76
 Zweck: Gutschein 2813</pre>
-			Важно указать цель использования, иначе пожертвование не будет назначено!</div>
+			Важно указать целевое назначение, иначе пожертвование не может быть распределено!</div>
 
 	</body>
 </html>
