--- a/www/tr/index.html
+++ b/www/tr/index.html
@@ -27,6 +27,13 @@
 				<a translate="no" href="../ru" class="langsel">русский язык</a>
 			</div>
 		</div>
+
+		<div class="content">
+			<h1>Freiburg mu?</h1>
+			<p>Maalesef kartpostalımızda yanlış web sitesini vermişiz. Lütfen buraya tıklayınız:</p>
+			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
+		</h1></div>
+
 		<div class="content">
 			<h1>Ödeme kartını durdurun!</h1>
 
@@ -38,7 +45,7 @@
 
 			<p>Ödeme kartı, mültecilerin özerkliğine bir tecavüz teşkil etmekte ve günlük yaşama katılımlarını kısıtlamaktadır. Rhine-Neckar bölgesinde 50 Avro'luk bir nakit limiti olacak. Heidelberg'de de benzer bir kısıtlama olması bekleniyor. Banka havaleleri, çevrimiçi alışverişler ve sözleşmeler mümkün değildir ya da ancak büyük bir çaba ile mümkündür. Hayatın birçok alanında nakit para gerekmektedir: örneğin küçük dükkanlar, haftalık pazarlar, bit pazarları veya kültürel etkinlikler. Tüm bunlar ödeme kartı tarafından kısıtlanmaktadır.</p>
 
-			<p>Ödeme kartı bir banka kartına benzese de, kart yalnızca belirli mağazalarda çalıştığından uygulama seçenekleri çok daha sınırlıdır. Ve bu durumdan etkilenen kişiler, sınırlı avantajlara rağmen yurtdışındaki ailelerini maddi olarak desteklemek için kenara para koymak isterlerse, bu çok daha zor hale geliyor. Kart, veri koruma açısından da sorunlu. Ödeme kartı, yetkililere kontrol için içgörü ve fırsatlar sunmaktadır.</p>
+			<p>Ödeme kartı bir banka kartına benzese bile, kart yalnızca belirli mağazalarda çalıştığından uygulama seçenekleri çok daha sınırlıdır. Ve bu durumdan etkilenen kişiler, sınırlı avantajlara rağmen yurtdışındaki ailelerini maddi olarak desteklemek için kenara para koymak isterlerse, bu çok daha zor hale geliyor. Kart, veri koruma açısından da sorunlu. Ödeme kartı, yetkililere kontrol için içgörü ve fırsatlar sunmaktadır.</p>
 
 
 			<h2>Ne yapacağız?</h2>
@@ -170,7 +177,7 @@
 			<ul>
 				<li>Bize e-posta gönderin:<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>Instagram:<br><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li>Telgraf:<br><a translte="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
+				<li translate="no">Telegram:<br><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
 			<h2>Bağış Yapın</h2>
@@ -179,7 +186,7 @@
 Kirchengemeinde Heidelberg
 DE77 6725 0020 0001 2061 76
 Zweck: Gutschein 2813</pre>
-			Kullanım amacı önemlidir, aksi takdirde bağış tahsis edilemez!</div>
+			Amaçlanan amaç önemlidir, aksi takdirde bağış tahsis edilemez!</div>
 
 	</body>
 </html>
